--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 MODELS_PATH=C:\Users\user\Downloads\models
-LLAMACPP_PATH=C:\Users\user\Downloads\llama.cpp-b3503\llama.cpp-b3503
+LLAMACPP_PATH_Windows=C:\Users\user\Downloads\llama.cpp-b3503\llama.cpp-b3503\llama-cli.exe
+LLAMACPP_PATH_Linux=/home/user/Downloads/llama.cpp-b3503/llama.cpp-b3503/llama-cli
